--- a/assets/myMedia.scss
+++ b/assets/myMedia.scss
@@ -132,6 +132,14 @@
 			height: 200px;
 		}
 	}
+	.nav {
+		nav {
+			.circleIcons {
+				display: flex;
+			}
+		}
+	}
+
 	.bookingContainer {
 		.booking {
 			clip-path: polygon(19% 0, 100% 0, 100% 100%, 0 100%);
